Fixing overlapping date issues so that only a single event is shown per day. Fixing the way in which the number of days is calculated. Adding ability to add and remove reservations after calendar widget instantiation. Adding click handlers for dates without reservations. Updating resolveDates to check to start date, end date, and status from calendar date as well as reservation data. Support jquery datepicker 1.8.*  which doesn't attach onclick handlers to dom. Fix for multiple states on single calendar day. Fix IE8 issue of appending div to input. Style past dates in calendar widget.

--- a/sass/_calendar.scss
+++ b/sass/_calendar.scss
@@ -116,12 +116,10 @@
         }        
 
         td a {
-           font-size:12px;
            color:$widgetText;
            border:none;
            background-color:transparent;
            background-image:none;
-           padding:7px 11px;
            position:relative;
         }
 
